2011/05/03:
 * Lambda: add a boolean parameter to Psetfield, true for non-exported globals
 * Simplif: inline non-exported global functions only used once
 * Cmmgen: while true do ... done simplified to infinite loop
 * Matching: applied inplace-let patch of Alain Frisch, for testing. Extended
   to handle trywith constructs

2011/05/02:
 * Simplif: inlining of one-use functions extended to tupled functions

2011/05/01:
 * Rec2loop: approximate arguments to get rid of invariant arguments
   for self tailcall recursive functions
 * Simplif: cascading of simplifications when inlining one-use functions
 * Simplif: prevent inlining of non-total calls of one-use functions

2011/04/30:
 * Rec2loop: substitute bound variables to avoid duplicating
    identifiers, when several functions have been successfullly
    transformed in the same recursive definition
 * Rec2loop: fix the case where a tailcall to an external function
    would become non-tailcall because of the transformation (the
    problem is still present for tailcalls to internal functions)

2011/04/29:
 * Simplif: fixed a memory-leak by preventing inlining of alias variables
   under abstractions and loops
 * Simplif: allow inlining of functions used only once

2011/04/29:
 * Only perform rec2loop for functions that are escaping outside the
   recursion, but not within the recursion, to prevent stack overflows.
 * In case of success, generate code only for escaping functions.
 * Improved test_all.ml script with more options

2011/04/27:
 * Added the beginning of a simple testsuite in simple-tests/, to run using test_all.ml as a script
 * Fixed a problem where rec2loop would abort because a callee was merged but not removed.
 * Disabled rec2loop when -g is set

2011/04/26:
 * Implemented transformation of tailcall-recursive functions into loops at the lambda-code level
   * Debugged the simple case of one recursive functions
   * Still some problems with mutually recursive functions (Env.components_of_module)